--- a/blog.html
+++ b/blog.html
@@ -21,6 +21,10 @@
   <h1>Blog</h1>
 <p>Short writeups, experiments, and stories from projects.</p>
 <hr />
+<h3><a href="blog/stadium-pacing.html">My pace during stadium runs</a></h3>
+<p><em>December 19, 2025</em><br />
+Looking at my pace during stadium runs to reveal (or not) the secrets for running faster.</p>
+<hr />
 <h3><a href="blog/tossing-potatoes.html">Tossing potatoes</a></h3>
 <p><em>December 2, 2025</em><br />
 A probability model for how many times you need to toss potatoes in a pan so each side gets cooked. Inclusion-exclusion in the kitchen.</p>
