--- a/blog.html
+++ b/blog.html
@@ -22,8 +22,8 @@
 <p>Short writeups, experiments, and stories from projects.</p>
 <hr />
 <h3><a href="blog/stadium-pacing.html">My pace during stadium runs</a></h3>
-<p><em>December 19, 2025</em><br />
-Looking at my pace during stadium runs to reveal (or not) the secrets for running faster.</p>
+<p><em>December 21, 2025</em><br />
+Using elevation data from my watch to analyze pacing strategies at the Harvard Stadium, and finding out what my best runs have in common.</p>
 <hr />
 <h3><a href="blog/tossing-potatoes.html">Tossing potatoes</a></h3>
 <p><em>December 2, 2025</em><br />
