--- a/blog.html
+++ b/blog.html
@@ -21,6 +21,10 @@
   <h1>Blog</h1>
 <p>Short writeups, experiments, and stories from projects.</p>
 <hr />
+<h3><a href="blog/reading-in-the-sun.html">Predicting shades in the French Alps</a></h3>
+<p><em>January 5, 2026</em><br />
+From topographic data and solar geometry to the optimal reading time on my parent's terrace.</p>
+<hr />
 <h3><a href="blog/stadium-pacing.html">My pace during stadium runs</a></h3>
 <p><em>December 21, 2025</em><br />
 Using elevation data from my watch to analyze pacing strategies at the Harvard Stadium, and finding out what my best runs have in common.</p>
