--- a/blog.html
+++ b/blog.html
@@ -21,6 +21,10 @@
   <h1>Blog</h1>
 <p>Short writeups, experiments, and stories from projects.</p>
 <hr />
+<h3><a href="blog/sunny-walk.html">Sunny walk in the French Alps</a></h3>
+<p><em>January 6, 2026</em><br />
+Combining GPS and topographic data to find the perfect winter walk time for my parents.</p>
+<hr />
 <h3><a href="blog/reading-in-the-sun.html">Predicting shades in the French Alps</a></h3>
 <p><em>January 5, 2026</em><br />
 From topographic data and solar geometry to the optimal reading time on my parent's terrace.</p>
